# darknet

./: CMakeLists.txt
src/: activation_layer.c  activations.c  avgpool_layer.c  batchnorm_layer.c  compare.c  connected_layer.c  convolutional_layer.c  cost_layer.c  crnn_layer.c  crop_layer.c  deconvolutional_layer.c  demo.c  detection_layer.c  dropout_layer.c  gru_layer.c  image.c  local_layer.c  lstm_layer.c  maxpool_layer.c  network.c  normalization_layer.c  option_list.c  parser.c  region_layer.c  reorg_layer.c  rnn_layer.c  route_layer.c  shortcut_layer.c  softmax_layer.c  tree.c  utils.c
